--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     restart: unless-stopped
   
   watchtower:
-    image: containrrr/watchtower
+    image: containrrr/watchtower:amd64-1.1.6
     volumes:
         - /var/run/docker.sock:/var/run/docker.sock
     # check for new images every Monday at 9:00 UTC and only watch watchtower,
