--- a/production/docker-compose.yml
+++ b/production/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 
 services:
   fireflyiii-prod:
-    image: jc5x/firefly-iii:latest
+    image: fireflyiii/core:latest
     volumes:
       - firefly_iii_upload_prod:/var/www/html/storage/upload
     env_file: .firefly-env
